--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="./src/assets/image.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>PortFolio</title>
+    <title>Portfolio</title>
   </head>
   <body style="background-color: rgba(22, 149, 174, 0.548); color: black;">
     <div id="root"></div>
